--- a/consultation.html
+++ b/consultation.html
@@ -15,6 +15,11 @@
                 <img src="logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
                 <img src="qs-unggul2-1-1.webp" alt="QS Unggul Logo" class="navbar-logo">
             </div>
+            <button class="hamburger" aria-label="Toggle menu">
+                <span class="bar"></span>
+                <span class="bar"></span>
+                <span class="bar"></span>
+            </button>
             <nav class="nav-menu">
                 <ul>
                     <li><a href="index.html#home">Home</a></li>
