--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h2>Formulir Layanan</h2>
             <p style="text-align: center; margin-bottom: 2rem;">Untuk mendapatkan layanan konsultasi yang lebih personal dan terperinci, silakan mengisi formulir konsultasi kami.</p>
             <div style="text-align: center;">
-                <a href="consultation.html" class="cta-button" style="font-size: 1.1rem;">Isi Formulir Konsultasi</a>
+                <a href="login.html" class="cta-button" style="font-size: 1.1rem;">Isi Formulir Konsultasi</a>
             </div>
         </div>
     </section>
