--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon"  href="/Users/kevin/Documents/TraeNorm/StuKudeta/Student-support.png"type="image/png"> 
     <title>Student Support Universitas Multimedia Nusantara</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header class="navbar">
@@ -34,9 +36,44 @@
 
     <section id="home" class="hero">
         <div class="container">
-            <h2>Selamat Datang di Student Support</h2>
-            <p>Professional guidance and support for your academic journey</p>
-            <a href="#booking" class="cta-button">Formulir Layanan</a>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/homeCarousel/slide1.jpg" alt="First slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Selamat Datang di Student Support</h2>
+                        <p>Professional guidance and support for your academic journey</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/homeCarousel/slide2.jpg" alt="Second slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Explore Our Services</h2>
+                        <p>Discover the range of support we offer</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/homeCarousel/slide4.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Join Our Community</h2>
+                        <p>Connect with peers and professionals</p>
+                    </div>
+                </div>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/homeCarousel/slide3.jpg" alt="Third slide">
+                    <div class="carousel-caption d-none d-md-block">
+                        <h2>Join Our Community</h2>
+                        <p>Connect with peers and professionals</p>
+                    </div>
+                </div>
+            </div>
+            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
         </div>
     </section>
 
@@ -163,19 +200,19 @@
             </div>
             <div class="social-links" style="text-align: center; margin-bottom: 2rem;">
                 <a href="https://www.facebook.com/UMN.Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="facebook.svg" alt="Facebook" style="width: 30px; height: 30px;">
+                    <img src="images/socialmedia/facebook.svg" alt="Facebook" style="width: 30px; height: 30px;">
                 </a>
                 <a href="https://twitter.com/UMN_Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="twitter.svg" alt="Twitter" style="width: 30px; height: 30px;">
+                    <img src="images/socialmedia/twitter.svg" alt="Twitter" style="width: 30px; height: 30px;">
                 </a>
                 <a href="https://www.instagram.com/umn_serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="instagram.svg" alt="Instagram" style="width: 30px; height: 30px;">
+                    <img src="images/socialmedia/instagram.svg" alt="Instagram" style="width: 30px; height: 30px;">
                 </a>
                 <a href="https://www.youtube.com/user/UMNSerpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="youtube.svg" alt="YouTube" style="width: 30px; height: 30px;">
+                    <img src="images/socialmedia/youtube.svg" alt="YouTube" style="width: 30px; height: 30px;">
                 </a>
                 <a href="https://www.linkedin.com/school/universitas-multimedia-nusantara/" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="linkedin.svg" alt="LinkedIn" style="width: 30px; height: 30px;">
+                    <img src="images/socialmedia/linkedin.svg" alt="LinkedIn" style="width: 30px; height: 30px;">
                 </a>
             </div>
 
@@ -215,3 +252,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="2000">
