--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     </header>
 
     <section id="home" class="hero">
-        <div class="container">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img class="d-block w-100" src="images/homeCarousel/slide1.jpg" alt="First slide">
@@ -60,21 +60,21 @@
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/homeCarousel/slide3.jpg" alt="Third slide">
+                    <img class="d-block w-100" src="images/homeCarousel/slide3.jpg" alt="Fourth slide">
                     <div class="carousel-caption d-none d-md-block">
                         <h2>Join Our Community</h2>
                         <p>Connect with peers and professionals</p>
                     </div>
                 </div>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </section>
 
@@ -253,4 +253,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-<div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
