--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon"  href="/Users/kevin/Documents/TraeNorm/StuKudeta/Student-support.png"type="image/png"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <link rel="icon"  href="/Users/kevin/Documents/TraeNorm/StuKudeta/Student-support.png" type="image/png"> 
     <title>Student Support Universitas Multimedia Nusantara</title>
     <link rel="stylesheet" href="styles.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -36,40 +36,29 @@
     </header>
 
     <section id="home" class="hero">
-        <div class="container">
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img class="d-block w-100" src="images/homeCarousel/slide1.jpg" alt="First slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2>Selamat Datang di Student Support</h2>
-                        <p>Professional guidance and support for your academic journey</p>
-                    </div>
+                    <img class="d-block" src="images/homeCarousel/slide1.jpg" alt="First slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/homeCarousel/slide2.jpg" alt="Second slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2>Explore Our Services</h2>
-                        <p>Discover the range of support we offer</p>
-                    </div>
+                    <img class="d-block" src="images/homeCarousel/slide2.jpg" alt="Second slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/homeCarousel/slide4.jpg" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2>Join Our Community</h2>
-                        <p>Connect with peers and professionals</p>
-                    </div>
+                    <img class="d-block" src="images/homeCarousel/slide4.jpg" alt="Third slide">
                 </div>
                 <div class="carousel-item">
-                    <img class="d-block w-100" src="images/homeCarousel/slide3.jpg" alt="Third slide">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h2>Join Our Community</h2>
-                        <p>Connect with peers and professionals</p>
-                    </div>
+                    <img class="d-block" src="images/homeCarousel/slide3.jpg" alt="Third slide">
                 </div>
             </div>
-           
-            </a>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
     </section>
 
