--- a/admin.html
+++ b/admin.html
@@ -25,10 +25,10 @@
             </button>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="#daftar">Daftar Permintaan</a></li>
+                    <li><a href="admin.html#">Daftar Permintaan</a></li>
                     <li><a href="#search">Search</a></li>
-                    <li><a href="#riwayat">Daftar Riwayat</a></li>
-                    <li><a href="#updateriwayat">Update Riwayat Konsultasi</a></li>
+                    <li><a href="admin/DaftarRiwayat.html#">Daftar Riwayat</a></li>
+                    <li><a href="">Update Riwayat Konsultasi</a></li>
                     <li><a href="#" onclick="logout(event)">Logout</a></li>
                 </ul>
             </nav>
