--- a/admin/DaftarRiwayat.html
+++ b/admin/DaftarRiwayat.html
@@ -52,7 +52,7 @@
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
-                <tbody> <!-- Dynamic rows will be inserted here --> </tbody> <!-- Add view detail popup --> <div class="modal fade" id="viewDetailModal" tabindex="-1" aria-labelledby="viewDetailModalLabel" aria-hidden="true"> <div class="modal-dialog"> <div class="modal-content"> <div class="modal-header"> <h5 class="modal-title" id="viewDetailModalLabel">Consultation Details</h5> <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> </div> <div class="modal-body"> <!-- Details will be dynamically inserted here --> </div> <div class="modal-footer"> <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button> </div> </div> </div> </div>
+                <tbody> <!-- Dynamic rows will be inserted here --> </tbody> <div id="popup-background"></div> <div id="popup" class="popup" style="display:none;"> <button class="close-btn" onclick="document.getElementById('popup').style.display='none'">&times;</button> <h2>Details</h2> <p id="popup-name"></p> <p id="popup-nim"></p> <p id="popup-description"></p> <p id="popup-notes"></p> </div>
             </table>
         </main>
     </section>
