--- a/consultation.html
+++ b/consultation.html
@@ -26,6 +26,7 @@
                     <li><a href="index.html#services">Layanan</a></li>
                     <li><a href="index.html#resources">Konselor</a></li>
                     <li><a href="index.html#contact">Kontak</a></li>
+                    <li><a href="html/studentview.html">View Consultation</a></li>
                     <li><a href="#" onclick="logout(event)">Logout</a></li>
                 </ul>
             </nav>
