--- a/admin/DaftarRiwayat.html
+++ b/admin/DaftarRiwayat.html
@@ -26,9 +26,9 @@
             <nav class="nav-menu">
                 <ul>
                     <li><a href="../admin.html">Daftar Permintaan</a></li>
-                    <li><a href="#search">Search</a></li>
-                    <li><a href="../admin/DaftarRiwayat.html#">Daftar Riwayat</a></li>
-                    <li><a href="">Update Riwayat Konsultasi</a></li>
+                    <li><a href="#">Search</a></li>
+                    <li><a href="DaftarRiwayat.html">Daftar Riwayat</a></li>
+                    <li><a href="UpdateRiwayat.html">Update Riwayat Konsultasi</a></li>
                     <li><a href="#" onclick="logout(event)">Logout</a></li>
                 </ul>
             </nav>
@@ -36,7 +36,7 @@
     </header>
 
     <section class="admin-form">
-        <main class="container mt-4">
+        <main class="container">
             <h1>Daftar Riwayat Konsultasi</h1>
             <table class="table table-striped">
                 <thead>
@@ -52,15 +52,28 @@
                         <th scope="col">Actions</th>
                     </tr>
                 </thead>
-                <tbody> <!-- Dynamic rows will be inserted here --> </tbody> <div id="popup-background"></div> <div id="popup" class="popup" style="display:none;"> <button class="close-btn" onclick="document.getElementById('popup').style.display='none'">&times;</button> <h2>Details</h2> <p id="popup-name"></p> <p id="popup-nim"></p> <p id="popup-description"></p> <p id="popup-notes"></p> </div>
+                <tbody>
+                    <!-- Dynamic rows will be inserted here -->
+                </tbody>
             </table>
+
+            <!-- Popup structure -->
+            <div id="popup-background"></div>
+            <div id="popup" class="popup" style="display:none;">
+                <button class="close-btn">&times;</button>
+                <h2>Details</h2>
+                <p id="popup-name"></p>
+                <p id="popup-nim"></p>
+                <p id="popup-description"></p>
+                <p id="popup-notes"></p>
+            </div>
         </main>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../script.js"></script>
     <script src="../js/daftarRiwayat.js"></script>
-
 </body>
 </html>
 
