--- a/admin/UpdateRiwayat.html
+++ b/admin/UpdateRiwayat.html
@@ -9,10 +9,32 @@
     <link rel="stylesheet" href="../style.css">
 </head>
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">Admin Panel</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="../admin.html">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="DaftarRiwayat.html">Daftar Riwayat</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="UpdateRiwayat.html">Update Riwayat Konsultasi</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
     <div class="container">
         <div class="row">
             <div class="col-12 p-3 text-center">
-                <img src="../umn.png" alt="UMN Logo" class="logo">
+                <img src="../umn.png" style="max-height: 80px;" alt="UMN Logo" class="logo">
             </div>
         </div>
 
@@ -29,6 +51,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../script.js"></script>
     <script src="../js/updateRiwayat.js"></script>
 </body>
 </html>
