--- a/html/studentview.html
+++ b/html/studentview.html
@@ -52,11 +52,11 @@
             </button>
             <nav class="nav-menu">
                 <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Layanan</a></li>
-                    <li><a href="#booking">Pendaftaran Layanan</a></li>
-                    <li><a href="#resources">Konselor</a></li>
-                    <li><a href="#contact">Kontak</a></li>
+                    <li><a href="../index.html#home">Home</a></li>
+                    <li><a href="../index.html#services">Layanan</a></li>
+                    <li><a href="../index.html#booking">Pendaftaran Layanan</a></li>
+                    <li><a href="../index.html#resources">Konselor</a></li>
+                    <li><a href="../index.html#contact">Kontak</a></li>
                 </ul>
             </nav>
         </div>
