--- a/admin/DaftarRiwayat.html
+++ b/admin/DaftarRiwayat.html
@@ -72,6 +72,13 @@
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../auth.js"></script>
+    <script>
+        // Check if user is admin
+        document.addEventListener('DOMContentLoaded', function() {
+            requireAdmin();
+        });
+    </script>
     <script src="../script.js"></script>
     <script src="../js/daftarRiwayat.js"></script>
 </body>
