--- a/admin/UpdateRiwayat.html
+++ b/admin/UpdateRiwayat.html
@@ -51,6 +51,13 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="../auth.js"></script>
+    <script>
+        // Check if user is admin
+        document.addEventListener('DOMContentLoaded', function() {
+            requireAdmin();
+        });
+    </script>
     <script src="../script.js"></script>
     <script src="../js/updateRiwayat.js"></script>
 </body>
