--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <header class="navbar">
         <div class="container">
             <div class="logo-container">
-                <img src="Student-support.png" alt="Student Support Logo" class="navbar-logo">
-                <img src="logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
-                <img src="qs-unggul2-1-1.webp" alt="QS Unggul Logo" class="navbar-logo">
+                <img src="images/logo/Student-support.png" alt="Student Support Logo" class="navbar-logo">
+                <img src="images/logo/logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
+                <img src="images/logo/qs-unggul2-1-1.webp" alt="QS Unggul Logo" class="navbar-logo">
             </div>
             <button class="hamburger" aria-label="Toggle menu">
                 <span class="bar"></span>
@@ -35,6 +35,7 @@
                     <li><a href="#services">Layanan</a></li>
                     <li><a href="#booking">Pendaftaran Layanan</a></li>
                     <li><a href="#resources">Konselor</a></li>
+                    <li><a href="html/students/studentview.html">Status Pendaftaran</a></li>
                     <li><a href="#contact">Kontak</a></li>
                 </ul>
             </nav>
