--- a/html/auth/login.html
+++ b/html/auth/login.html
@@ -3,33 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Student-support.png" type="image/png"> 
+    <link rel="icon" href="../../images/logo/Student-support.png" type="image/png"> 
     <title>Login - Student Support UMN</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="../../css/navbar.css">
+    <link rel="stylesheet" href="../../styles.css">
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <div class="logo-container">
-                <img src="Student-support.png" alt="Student Support Logo" class="navbar-logo">
-                <img src="logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
-                <img src="qs-unggul2-1-1.webp" alt="QS Unggul Logo" class="navbar-logo">
-            </div>
-            <button class="hamburger" aria-label="Toggle menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-            <nav class="nav-menu">
-                <ul>
-                    <li><a href="index.html#home">Home</a></li>
-                    <li><a href="index.html#services">Layanan</a></li>
-                    <li><a href="index.html#resources">Konselor</a></li>
-                    <li><a href="index.html#contact">Kontak</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="navbar-container"></div>
 
     <section class="login-form">
         <div class="container">
@@ -47,7 +29,36 @@
         </div>
     </section>
 
-    <script src="script.js"></script>
-    <script src="auth.js"></script>
+    <div id="footer-contact-container"></div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        // Load navbar
+        fetch('../components/navbar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbar-container').innerHTML = data;
+                // Initialize hamburger menu after navbar is loaded
+                const hamburger = document.querySelector('.hamburger');
+                if (hamburger) {
+                    hamburger.addEventListener('click', function() {
+                        this.classList.toggle('active');
+                        document.querySelector('.nav-menu').classList.toggle('active');
+                    });
+                }
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+
+        // Load footer
+        fetch('../components/footer-contact.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-contact-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading footer:', error));
+    </script>
+    <script src="../../js/auth.js"></script>
+    <script src="../script.js"></script>
 </body>
 </html>
