--- a/index.html
+++ b/index.html
@@ -17,30 +17,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
-    <header class="navbar">
-        <div class="container">
-            <div class="logo-container">
-                <img src="images/logo/Student-support.png" alt="Student Support Logo" class="navbar-logo">
-                <img src="images/logo/logo-umn-bg-white-09-grey.webp" alt="UMN Logo" class="navbar-logo">
-                <img src="images/logo/qs-unggul2-1-1.webp" alt="QS Unggul Logo" class="navbar-logo">
-            </div>
-            <button class="hamburger" aria-label="Toggle menu">
-                <span class="bar"></span>
-                <span class="bar"></span>
-                <span class="bar"></span>
-            </button>
-            <nav class="nav-menu">
-                <ul>
-                    <li><a href="#home">Home</a></li>
-                    <li><a href="#services">Layanan</a></li>
-                    <li><a href="#booking">Pendaftaran Layanan</a></li>
-                    <li><a href="#resources">Konselor</a></li>
-                    <li><a href="html/students/studentview.html">Status Pendaftaran</a></li>
-                    <li><a href="#contact">Kontak</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <div id="navbar-container"></div>
 
     <section id="home" class="hero">
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="2000">
@@ -135,111 +112,37 @@
             <h2>Formulir Layanan</h2>
             <p style="text-align: center; margin-bottom: 2rem;">Untuk mendapatkan layanan konsultasi yang lebih personal dan terperinci, silakan mengisi formulir konsultasi kami.</p>
             <div style="text-align: center;">
-                <a href="login.html" class="cta-button" style="font-size: 1.1rem;">Isi Formulir Konsultasi</a>
+                <a href="html/auth/login.html" class="cta-button" style="font-size: 1.1rem;">Isi Formulir Konsultasi</a>
             </div>
         </div>
     </section>
 
-    <section id="contact" class="contact">
-        <div style="text-align: center; margin-bottom: 2rem;">
-            <img src="umn.png" alt="UMN Logo" style="width: 150px; height: auto;">
-        </div>
-        <div class="menu-links" style="text-align: center; margin-bottom: 2rem; display: grid; grid-template-columns: repeat(4, 1fr); gap: 2rem; max-width: 1200px; margin-left: auto; margin-right: auto; padding: 2rem; background: rgba(255, 255, 255, 0.05); border-radius: 10px;">
-            <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 1rem;">
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Beranda
-                    </a>
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Pendaftaran
-                    </a>
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Aktifitas Kampus
-                    </a>
-                </div>
-                <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 1rem;">
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Prestasi
-                    </a>
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Karir di UMN
-                    </a>
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Info Almamater
-                    </a>
-                </div>
-                <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 1rem;">
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Profil
-                    </a>
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Kalender Akademik
-                    </a>
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Berita & Acara
-                    </a>
-                </div>
-                <div style="display: flex; flex-direction: column; align-items: flex-start; gap: 1rem;">
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Dormitory UMN
-                    </a>
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        CED
-                    </a>
-                    <a href="#" style="color: var(--text-primary); text-decoration: none; font-weight: 500; font-size: 1.1rem; transition: all 0.3s ease; padding: 0.5rem 1rem; border-radius: 5px; width: 100%;" onmouseover="this.style.background='rgba(27, 59, 111, 0.1)'; this.style.transform='translateX(5px)'" onmouseout="this.style.background='transparent'; this.style.transform='translateX(0)'">
-                        Wisuda UMN
-                    </a>
-                </div>
-            </div>
-            <div class="social-links" style="text-align: center; margin-bottom: 2rem;">
-                <a href="https://www.facebook.com/UMN.Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="images/socialmedia/facebook.svg" alt="Facebook" style="width: 30px; height: 30px;">
-                </a>
-                <a href="https://twitter.com/UMN_Serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="images/socialmedia/twitter.svg" alt="Twitter" style="width: 30px; height: 30px;">
-                </a>
-                <a href="https://www.instagram.com/umn_serpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="images/socialmedia/instagram.svg" alt="Instagram" style="width: 30px; height: 30px;">
-                </a>
-                <a href="https://www.youtube.com/user/UMNSerpong" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="images/socialmedia/youtube.svg" alt="YouTube" style="width: 30px; height: 30px;">
-                </a>
-                <a href="https://www.linkedin.com/school/universitas-multimedia-nusantara/" style="margin: 0 1rem; text-decoration: none;" target="_blank">
-                    <img src="images/socialmedia/linkedin.svg" alt="LinkedIn" style="width: 30px; height: 30px;">
-                </a>
-            </div>
+    <div id="footer-contact-container"></div>
 
-            <div class="container">
-                <div style="display: grid; grid-template-columns: repeat(3, 1fr); gap: 2rem; margin-bottom: 2rem;">
-                    <div>
-                        <h3 style="font-weight: 700; margin-bottom: 1rem;">Informasi Student Support</h3>
-                        <p>Gedung C, Ruang C0205</p>
-                        <p>Senin - Jumat, Pukul 08:00 - 17:00</p>
-                        <p>Email: psikolog@umn.ac.id</p>
-                        <p>(T)+62-21.5422.0808</p>
-                        <p>e-mail: <a href="mailto:marketing@umn.ac.id" style="color: inherit; text-decoration: none;">psikolog@umn.ac.id</a></p>
-                    </div>
-                    <div>
-                        <h3 style="font-weight: 700; margin-bottom: 1rem;">Informasi UMN</h3>
-                        <p>Email: marketing@umn.ac.id</p>
-                        <p>(T)+62-21.5422.0808</p>
-                        <p>(F)+62-21.5422.0800</p>
-                        <p><a href="mailto:marketing@umn.ac.id" style="color: inherit; text-decoration: none;">e-mail: marketing@umn.ac.id</a></p>
-                    </div>
-                    <div>
-                        <h3 style="font-weight: 700; margin-bottom: 1rem;">Universitas Multimedia Nusantara</h3>
-                        <p>Jl. Scientia Boulevard, Gading Serpong, Kel. Curug Sangereng,</p>
-                        <p>Kec. Kelapa Dua, Kab. Tangerang,</p>
-                        <p>Prop. Banten 15810, Indonesia</p>
-                    </div>
-                </div>
-        </div>
-    </section>
+    <script>
 
-    <footer>
-        <div class="container">
-            <p>&copy; 2025 Student Support Universitas Multimedia Nusantara. All rights reserved.</p>
-        </div>
-    </footer>
+fetch('html/components/navbar.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('navbar-container').innerHTML = data;
+                // Initialize hamburger menu after navbar is loaded
+                const hamburger = document.querySelector('.hamburger');
+                if (hamburger) {
+                    hamburger.addEventListener('click', function() {
+                        this.classList.toggle('active');
+                        document.querySelector('.nav-menu').classList.toggle('active');
+                    });
+                }
+            })
+            .catch(error => console.error('Error loading navbar:', error));
+
+        fetch('html/components/footer-contact.html')
+            .then(response => response.text())
+            .then(data => {
+                document.getElementById('footer-contact-container').innerHTML = data;
+            })
+            .catch(error => console.error('Error loading footer:', error));
+    </script>
 
     <script src="script.js"></script>
 </body>
