--- a/index.html
+++ b/index.html
@@ -127,10 +127,29 @@ fetch('html/components/navbar.html')
                 document.getElementById('navbar-container').innerHTML = data;
                 // Initialize hamburger menu after navbar is loaded
                 const hamburger = document.querySelector('.hamburger');
-                if (hamburger) {
+                const navMenu = document.querySelector('.nav-menu');
+                
+                if (hamburger && navMenu) {
+                    // Toggle menu on hamburger click
                     hamburger.addEventListener('click', function() {
                         this.classList.toggle('active');
-                        document.querySelector('.nav-menu').classList.toggle('active');
+                        navMenu.classList.toggle('active');
+                    });
+
+                    // Close menu when clicking menu items
+                    navMenu.querySelectorAll('a').forEach(item => {
+                        item.addEventListener('click', () => {
+                            hamburger.classList.remove('active');
+                            navMenu.classList.remove('active');
+                        });
+                    });
+
+                    // Close menu when clicking outside
+                    document.addEventListener('click', (e) => {
+                        if (!hamburger.contains(e.target) && !navMenu.contains(e.target)) {
+                            hamburger.classList.remove('active');
+                            navMenu.classList.remove('active');
+                        }
                     });
                 }
             })
