--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <link rel="icon"  href="images/logo/Student-support.png" type="image/png"> 
+    <link rel="icon"  href="https://i.postimg.cc/hvPTCz7M/Student-support.png" type="image/png"> 
     <title>Student Support Universitas Multimedia Nusantara</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/global.css">
