--- a/html/auth/register.html
+++ b/html/auth/register.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Student-support.png" type="image/png"> 
+    <link rel="icon" href="https://i.postimg.cc/hvPTCz7M/Student-support.png" type="image/png"> 
     <title>Register - Student Support UMN</title>
     <link rel="stylesheet" href="../../styles.css">
 </head>
