--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -19,7 +19,7 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
-                        <th scope="col">#</th>
+                        <th scope="col">ID Layanan</th>
                         <th scope="col">NIM</th>
                         <th scope="col">Full Name</th>
                         <th scope="col">Email</th>
